# space-bodies-gravity-simulation

./: .gitignore  AGENTS.md  README.md  TODO.md  instructions.md  prompts.md
docs/plan/: plan.md
docs/prompts/: prompts.md
docs/tz/: compile.bat  tz.tex
program/: CMakeLists.txt  HELP.md  README.md  main.cpp  pyproject.toml  setup.py
program/gui/: MainWindow.cpp  MainWindow.h
program/io/: CSVSerializer.cpp  CSVSerializer.h
program/physics/: CelestialBody.cpp  CelestialBody.h  CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  GravityCalculator.cpp  GravityCalculator.h  PhysicsConstants.h  RocheLimitCalculator.cpp  RocheLimitCalculator.h  Vector3D.cpp  Vector3D.h  VerletIntegrator.cpp  VerletIntegrator.h
program/simulation/: SimulationConfig.h  SimulationEngine.cpp  SimulationEngine.h
program/src/gravity_sim/: __init__.py  benchmark.py  main.py
program/src/gravity_sim/core/: __init__.py  body.py  colors.py  constants.py  snapshot.py  system_state.py  validation.py  vector.py
program/src/gravity_sim/io/: __init__.py  csv_loader.py  csv_saver.py  csv_schema.py  presets.py
program/src/gravity_sim/native/: cpp_backend.cpp
program/src/gravity_sim/physics/: __init__.py  backends.py  collisions.py  engine.py  fragmentation.py  gravity.py  integrators.py  roche.py
program/src/gravity_sim/resources/presets/: __init__.py  earth_moon.csv  earth_moon_static.csv  empty.csv  inner_solar_system_like.csv  mars_moons.csv  roche_close_circular.csv  roche_jupiter_grazer.csv  roche_limit_demo.csv  roche_moon_eccentric.csv  simple_collision.csv  three_body_orbits.csv
program/src/gravity_sim/ui/: app.py  body_table_model.py  controls_panel.py  dialogs.py  main_window.py  projection_view.py
program/tests/: test_backends.py  test_benchmark.py  test_collisions.py  test_colors.py  test_csv_io.py  test_fragmentation.py  test_gravity.py  test_roche.py  test_validation.py  test_verlet.py
