[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-sim"
version = "0.1.0"
description = "Planetary system and gravity interaction simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pybind11>=2.12",
]

[project.scripts]
gravity-sim = "gravity_sim.main:main"
gravity-sim-benchmark = "gravity_sim.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gravity_sim = ["resources/presets/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
